<resources>
    <string name="app_name">RatTrap</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_profile_page">ProfilePage</string>
    <string name="not_reported">Not Reported</string>
    <string name="prompt_key">Key</string>
    <string name="prompt_address">Address</string>
    <string name="prompt_zip">Zip</string>
    <string name="prompt_date">Date</string>
    <string name="prompt_city">City</string>
    <string name="prompt_latitude">Latitude</string>
    <string name="prompt_locationType">Loc. Type</string>
    <string name="prompt_borough">Borough</string>
    <string name="prompt_longitude">Longitude</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key">AIzaSyDdp8ch9R08X6-4RRPGMCJnxOSHmmjLJx8</string>
</resources>
